--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <!-- Required meta tags-->
+  <head>    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <!-- Color theme for statusbar (Android only) -->
-    <meta name="theme-color" content="#2196f3">
-    <!-- Your app title -->
-    <title>My App</title>
+    <meta name="apple-mobile-web-app-capable" content="yes">    
+    <meta name="theme-color" content="#2196f3">    
+    <title>Campero Fertilizadoras</title>
     <!-- Framework7 styles -->
     <link rel="stylesheet" href="path/to/framework7-bundle.min.css">
   </head>
-  <body>
-    <!-- App Root Element -->
+  <body>    
     <div id="app"></div>
-
-    <!-- Scripts will be auto injected -->
   </body>
 </html>
