Iconos. Quitar build bundle

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Cálculos de fertilización"/>    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />    
     <link rel="stylesheet" href="%PUBLIC_URL%/framework7-bundle.min.css">
+    <script src="https://auraview.auravant.com/sdk/v1.0/aura-package_v1.0.js"></script>
     <title>Campero Fertilizadoras</title>
   </head>
   <body>    
