--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+    <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#2196f3">
     <meta name="description" content="Cálculos de fertilización"/>    
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />    
-    <link rel="stylesheet" href="%PUBLIC_URL%/framework7-bundle.min.css">
-    <script src="https://auraview.auravant.com/sdk/v1.0/aura-package_v1.0.js"></script>
+    <link rel="manifest" href="/manifest.json" />    
+    <link rel="stylesheet" href="/framework7-bundle.min.css">
+    <!--<script src="https://auraview.auravant.com/sdk/v1.0/aura-package_v1.0.js"></script>-->
     <title>Campero Fertilizadoras</title>
   </head>
   <body>    
     <div id="app"></div>    
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
